# Trajectory-Homework

./: README.md
astar_path_planner/: CMakeLists.txt
astar_path_planner/launch/: astar_planner.launch
astar_path_planner/rviz/: astar_path_planner.rviz
astar_path_planner/src/: astar_planner.cpp  obstacle_cloud.cpp  obstacle_generator.cpp
gcopter/: CMakeLists.txt
gcopter/config/: global_planning.yaml
gcopter/include/misc/: visualizer.hpp
gcopter/launch/: global_planning.launch
gcopter/src/: global_planning.cpp
map_gen/mockamap/include/: maps.hpp
map_gen/mockamap/src/: maps.cpp  mockamap.cpp
